compiler/arc/src/snapshots/arc__parser__tests__description.snap
---
source: compiler/arc/src/parser.rs
expression: "parse(r#\"[package]\n            name = 'sample'\n            lume_version = '^0'\n            description = 'Some description'\"#)"
---
Project {
    id: ProjectId(
        14757695837985013862,
    ),
    path: "<test>",
    name: "sample",
    lume_version: Spanned {
        value: VersionReq {
            comparators: [
                Comparator {
                    op: Caret,
                    major: 0,
                    minor: None,
                    patch: None,
                    pre: Prerelease(""),
                },
            ],
        },
        span: 65..69,
    },
    version: None,
    description: Some(
        "Some description",
    ),
}
