compiler/arc/src/snapshots/arc__parser__tests__empty_file.snap
---
source: compiler/arc/src/parser.rs
expression: "parse_err(\"\")"
---
ArcfileMissingSection {
    name: "package",
}
