compiler/arc/src/snapshots/arc__parser__tests__invalid_version_string.snap
---
source: compiler/arc/src/parser.rs
expression: "parse_err(r#\"[package]\n            name = 'sample'\n            lume_version = '^1-1'\"#)"
---
ArcfileInvalidVersion {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "[package]\n            name = 'sample'\n            lume_version = '^1-1'",
        package: PackageId(
            0,
        ),
    },
    range: 65..71,
    version: "\"^1-1\"",
    field: "lume_version",
}
