compiler/arc/src/snapshots/arc__parser__tests__version.snap
---
source: compiler/arc/src/parser.rs
expression: "parse(r#\"[package]\n            name = 'some-package'\n            version = '1.0.0'\n            lume_version = '^0'\"#)"
---
Project {
    id: PackageId(
        16834419078118558222,
    ),
    path: "<test>",
    name: "some-package",
    lume_version: Spanned {
        value: VersionReq {
            comparators: [
                Comparator {
                    op: Caret,
                    major: 0,
                    minor: None,
                    patch: None,
                    pre: Prerelease(""),
                },
            ],
        },
        span: 101..105,
    },
    version: Some(
        Spanned {
            value: Version {
                major: 1,
                minor: 0,
                patch: 0,
            },
            span: 66..73,
        },
    ),
    description: None,
}
