compiler/arc/src/snapshots/arc__parser__tests__with_unexpected_lume_version_type.snap
---
source: compiler/arc/src/parser.rs
expression: "parse_err(r#\"[package]\n            name = 'sample'\n            lume_version = 1\"#)"
---
ArcfileUnexpectedType {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "[package]\n            name = 'sample'\n            lume_version = 1",
        package: PackageId(
            0,
        ),
    },
    range: 65..66,
    name: "lume_version",
    expected: "string",
    found: "integer",
}
