compiler/arc/src/snapshots/arc__parser__tests__with_unexpected_package_type.snap
---
source: compiler/arc/src/parser.rs
expression: "parse_err(r#\"package = 'sample'\"#)"
---
ArcfileUnexpectedType {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "package = 'sample'",
        package: PackageId(
            0,
        ),
    },
    range: 10..18,
    name: "package",
    expected: "table",
    found: "string",
}
