compiler/arc/src/snapshots/arc__parser__tests__without_lume_version.snap
---
source: compiler/arc/src/parser.rs
expression: "parse_err(r#\"[package]\n            name = 'sample'\"#)"
---
ArcfileMissingLumeVersion {
    source: NamedSource {
        name: "<test>",
        content: "[package]\n            name = 'sample'",
    },
    range: 0..37,
}
